Taking 1.1.2 changes (#244)